--- a/online grocery- store/styler.css
+++ b/online grocery- store/styler.css
@@ -109,6 +109,10 @@
     background-color: rgb;
     background-color: #a3d0bc;
     margin-bottom: 25px;
+	 transition: transform .2s;
+}
+#services .box.:hover{
+	 transform: scale(1.5);
 }
 #services .box img{
     height: 150px;
@@ -142,9 +146,18 @@
 }
 #clients img{
     height: 150px;
+	
 }
 .client-item{
-    padding: 34px;
+    padding: 24px;
+	  transition: transform .2s; /* Animation */
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+	
+}
+.client-item :hover{
+	 transform: scale(1.5);
 }
 /* contact section */
 
